<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="36sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/restaurantNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:autofillHints="name"
            android:hint="@string/restaurant_name"
            android:inputType="textCapWords"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/commentsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:autofillHints="name"
            android:hint="@string/customer_comments"
            android:inputType="text"
            android:minHeight="60dp"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/cuisineTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:entries="@array/cuisine_type"
            android:minHeight="48dp"
            android:padding="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liked"
            android:padding="3dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/radioLiked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/radioService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/radioPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/radioContext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/context"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/radioAtmosphere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atmosphere"
                android:checked="false"/>

        </RadioGroup>


        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_margin="5dp"
            android:contentDescription="@string/rate_a_restaurant"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_rating"
            android:layout_margin="20dp"/>

    </LinearLayout>
</ScrollView>